--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -1,17 +1,51 @@
 .container{
   background-color: #ffffff;
   height: 100vh;
-  width: 100%;
+  width: 100%; 
+  padding: 1rem;
 }
+
+.cardConatiner{
+   background-color: aqua;
+}
+
 .card{
-  height: 25.5rem;
+  height: 25.5rem !important;
   padding-top: 1.2rem;
   padding-bottom: 1.2rem;
   padding-left: 2rem;
-  padding-right: 2rem;
-  width: 22.5rem;
+  padding-right: 2rem;  
+  width: 22.5rem !important;
   border: 0.06rem solid #00F2FE;
   border-radius: 1.1rem;
   box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
+
+.cardAvatarSingle{
+  border-radius: 50%;
+}
+.cardAvatar{
+  position: relative;
+  right: -2rem !important; 
+  border-radius: 50%;
+}
+.cardAvatar2nd{
+  position: absolute; 
+  left:-1.5rem !important; 
+  border-radius: 50%;
+}
+
+.statusBtnInProgress{
+  background-color: #FF9800;
+}
+
+.statusBtnSubmitted{
+  background-color: #2ECC71;
+}
+
+.statusBtnNotStarted{
+  background-color: #EB5757;
+}
+
+
 
