--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -7,16 +7,10 @@
 
 
 
-.card{
-  height: 25.5rem !important;
-  padding-top: 1.2rem;
-  padding-bottom: 1.2rem;
-  padding-left: 2rem;
-  padding-right: 2rem;  
-  width: 22.5rem !important;
-  border: 0.06rem solid #00F2FE;
-  border-radius: 1.1rem;
-  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+.card{ 
+  border: 0.06rem solid #00F2FE ;
+  border-radius: 1.1rem !important;
+  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25) ;
 }
 
 .cardAvatarSingle{
