--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -8,35 +8,44 @@
 
 
 .card{ 
-  border: 0.06rem solid #00F2FE ;
-  border-radius: 1.1rem !important;
-  box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25) ;
+width: 320px;
+height: 320px;
+background: #FFFFFF0F 0% 0% no-repeat padding-box !important;
+border: 2px solid #FFFFFF29 !important;
+border-radius: 64px 8px 8px 8px !important;
+opacity: 1;
+}
+
+.cardDescription{
+  color: #FFFFFF99 !important;
 }
 
 .cardAvatarSingle{
   border-radius: 50%;
 }
 .cardAvatar{
-  position: relative;
-  left: 0.5rem !important; 
-  border-radius: 50%; 
+  position: absolute; 
+  left:0.3rem !important; 
+ border-radius: 50%; 
 }
 .cardAvatar2nd{
-  position: absolute; 
-  right:1rem !important; 
-  border-radius: 50%;
+  border-radius: 50%;  
 }
 
-.statusBtnInProgress{
-  background-color: #FF9800;
+.registerBtn{
+width: 150px;
+padding: 0.5rem;
+height: 44px;
+background: transparent linear-gradient(146deg, var(--unnamed-color-00f2fe) 0%, #32F9E5 52%, var(--unnamed-color-68fdc6) 100%) 0% 0% no-repeat padding-box;
+background: transparent linear-gradient(146deg, #00F2FE 0%, #32F9E5 52%, #68FDC6 100%) 0% 0% no-repeat padding-box;
+border-radius: 2px;
+opacity: 1;
 }
 
-.statusBtnSubmitted{
-  background-color: #2ECC71;
-}
-
-.statusBtnNotStarted{
-  background-color: #EB5757;
+.underLine{
+height: 4px;
+background: transparent linear-gradient(90deg, #00F2FE 0%, #68FDC6 100%) 0% 0% no-repeat padding-box;
+opacity: 1;
 }
 
 
