--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -30,14 +30,17 @@ opacity: 1;
 
 .cardAvatarSingle{
   border-radius: 50%;
+  border: 2px solid #707070 !important;
 }
 .cardAvatar{
   position: absolute; 
-  left:0.3rem !important; 
+  left:0.2rem !important; 
  border-radius: 50%; 
+ border: 2px solid #707070 !important;
 }
 .cardAvatar2nd{
   border-radius: 50%;  
+  border: 2px solid #707070 !important;
 }
 
 .registerBtn{
