--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -38,19 +38,16 @@ opacity: 1;
   font-family: Roboto Mono !important;
 }
 
-.cardAvatarSingle{
+.cardAvatar{
   border-radius: 50%;
   border: 2px solid #707070 !important;
 }
-.cardAvatar{
-  position: absolute; 
-  left:0.2rem !important; 
- border-radius: 50%; 
- border: 2px solid #707070 !important;
-}
-.cardAvatar2nd{
-  border-radius: 50%;  
-  border: 2px solid #707070 !important;
+
+.cardParent{
+    position: absolute;
+    top:0.09rem;
+    left: 2rem;
+    width: 50px;
 }
 
 .cardStatus{
