Links | registration | ideas |idea details | fixes (#35)
* initial nhost seup

* nhost linking

* nhost linking

* nhost linking

* nhost linking

* removed env file

* taking care of hostname

* changed nhost package to nextjs

* fixed redirection issue

* lock file refresh

* added rect module for nhost

* redirect url server name update

* debug log for redirection issue

* debug log for redirection issue

* removed debug log for redirection issue

* initial registration page

* initial registration page

* registration with rich tetbox

* few color update

* intermittent checkin

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,4 @@
+@import "form-control.css";
 .container {
   padding: 0 2rem;
 }
@@ -126,4 +127,29 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+
+.page-title {
+  text-decoration: none; 
+  position: relative; 
+}   
+
+.page-title:after {
+  position: absolute;
+  content: '';
+  height: 4px;
+  bottom: -8px; 
+
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  width: 40%;
+  background: transparent linear-gradient(90deg, #00F2FE 0%, #68FDC6 100%) 0% 0% no-repeat padding-box;
+    
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  transition:.5s;
 }
