--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -10,7 +10,7 @@
 }
 
 .card{ 
-width: 320px;
+width: 100%;
 height: 320px;
 background: #FFFFFF0F 0% 0% no-repeat padding-box !important;
 border: 2px solid #FFFFFF29 !important;
@@ -69,6 +69,5 @@ height: 4px;
 background: transparent linear-gradient(90deg, #00F2FE 0%, #68FDC6 100%) 0% 0% no-repeat padding-box;
 opacity: 1;
 }
-
 
 
