--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -19,9 +19,10 @@
   cursor: pointer;
 }
 .card:hover {
-  -webkit-box-shadow: 0px 0px 25px 1px rgba(104, 253, 198, 1);
-  -moz-box-shadow: 0px 0px 25px 1px rgba(104, 253, 198, 1);
-  box-shadow: 0px 0px 25px 1px rgba(104, 253, 198, 1);
+  border: solid 2px rgba(104, 253, 198, 1) !important;
+  -webkit-box-shadow: 0px 0px 16px 1px rgba(104, 253, 198, 0.4);
+  -moz-box-shadow: 0px 0px 16px 1px rgba(104, 253, 198, 0.4);
+  box-shadow: 0px 0px 16px 1px rgba(104, 253, 198, 0.4);
 }
 
 .title {
