--- a/styles/idea.module.css
+++ b/styles/idea.module.css
@@ -89,186 +89,12 @@
 
 /* Status Bar */
 
-.status-list, .status-list-item {
-  margin: 0;
-  padding: 0;
-  color: #00cec9;
-  font-family: verdana;
-  font-size: 14px;
-}
-
-.status-list {
-  display: flex;
-  width:  100%;
-  justify-content: space-between;
-  position: relative;
-}
-  
-.status-list:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: #81ecec;
-    
-    
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(0, -50%);
-    z-index: -1;
-  
-}
-
-.status-list-item {
-  list-style-type: none;
-  position: relative;
-  cursor: pointer;
-}
-.status-list-item:after {
-    content: '';
-    display: block;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #222222;
-    border: 2px solid #ffffff99;
-    transition: background-color .2s ease;
-  
-}
-
-.status-list-item.active:after {
-  background-color: #81ecec;
-}
-
-.status-list-item-inner {
-  position: absolute;
-  top: calc(-50px);
-  left: 50%;
-  transform: translate(-50%, 0);
-  display: inline-block;
-  text-align: center;
-  text-align: center;
-  width: 800px / 8;
-}
-
-
-.status-container {
-  /* width: 80%; */
-  /* padding: 50px 0;
-  margin: 50px auto; */
-  position: relative;
-  overflow: hidden;
-}
-
-.status-container:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 32px;
-  margin-left: -1px;
-  width: 2px;
-  height: 100%;
-  background: #CCD1D9;
-  z-index: 1
-}
-
-.timeline-block {
-  width: -webkit-calc(100% - 18px);
-  width: -moz-calc(100% - 18px);
-  width: calc(100% - 18px);
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: flex;
-  height: 4rem;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
-  -moz-box-pack: justify;
-  justify-content: space-between;
-  clear: both;
-}
-
-.timeline-block-right {
-  float: right;
-}
-
-.timeline-block-left {
-  float: left;
-  direction: rtl
-}
-
-.marker {
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  /* border: 2px solid #00F2FE; */
-  background: #4FC1E9;
-  margin-top: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999
-}
-
-.timeline-content {
-  width: 95%;
-  padding: 0 15px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.timeline-content h3 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  font-size: 25px;
-  font-weight: 500
-}
-
-.timeline-content span {
-  font-size: 15px;
-  color: #a4a4a4;
-}
-
-.timeline-content p {
-  font-size: 14px;
-  line-height: 1.5em;
-  word-spacing: 1px;
-  color: #888;
-}
-
-
-@media screen and (max-width: 768px) {
-  .container:before {
-     left: 8px;
-     width: 2px;
-  }
-  .timeline-block {
-     width: 100%;
-     margin-bottom: 30px;
-  }
-  .timeline-block-right {
-     float: none;
-  }
-
-  .timeline-block-left {
-     float: none;
-     direction: ltr;
-  }
-}
-
-
 
 .history-tl-container{
-    /* font-family: "Roboto",sans-serif; */
-  /* width:50%; */
-  /* margin:auto; */
   display:block;
   position:relative;
 }
 .history-tl-container .tl{
-    margin:20px 0;
     padding:0;
     display:inline-block;
 
@@ -276,41 +102,34 @@
 .history-tl-container .tl .tl-item{
     list-style: none;
     margin:auto;
-    /* margin-left:200px; */
     min-height:50px;
-    /*background: rgba(255,255,0,0.1);*/
     border-left:1px dashed #86D6FF;
     padding:0 0 50px 30px;
     position:relative;
 }
-.history-tl-container .tl li:last-child{ border-left:0;}
+.history-tl-container .tl li:last-child{ border-left:0; padding-bottom: 0px;}
 .history-tl-container .tl li::before{
     position: absolute;
-    left: -10px;
+    left: -12px;
     top: 5px;
     content: " ";
-    border: 8px solid rgba(255, 255, 255, 0.74);
+    border: 4px solid rgba(255, 255, 255, 0.84);
     border-radius: 500%;
     background: #258CC7;
-    height: 20px;
-    width: 20px;
+    height: 25px;
+    width: 25px;
     transition: all 500ms ease-in-out;
 
-}
-.history-tl-container .tl .tl-item:hover::before{
-    border-color:  #258CC7;
-    transition: all 1000ms ease-in-out;
 }
 .tl .tl-item .item-title{
 }
 .tl .tl-item .item-detail{
-    /* color:rgba(0,0,0,0.5); */
     font-size:12px;
 }
 .tl .tl-item .timestamp{
     color: #8D8D8D;
     position: absolute;
-  width:100px;
+    width:100px;
     left: -50%;
     text-align: right;
     font-size: 12px;
