add ESLint config and Pretter Config files and ran prettier once.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -131,30 +131,31 @@
 
 .text-title,
 .page-title {
-  text-decoration: none; 
-  position: relative; 
-}   
+  text-decoration: none;
+  position: relative;
+}
 
 .text-title:after,
 .page-title:after {
   position: absolute;
-  content: '';
+  content: "";
   height: 4px;
-  bottom: -8px; 
+  bottom: -8px;
 
   margin: 0 auto;
   left: 0;
   right: 0;
   width: 40%;
-  background: transparent linear-gradient(90deg, #00F2FE 0%, #68FDC6 100%) 0% 0% no-repeat padding-box;
-    
-  -o-transition:.5s;
-  -ms-transition:.5s;
-  -moz-transition:.5s;
-  -webkit-transition:.5s;
-  transition:.5s;
+  background: transparent linear-gradient(90deg, #00f2fe 0%, #68fdc6 100%) 0% 0%
+    no-repeat padding-box;
+
+  -o-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
-.text-title:after{
+.text-title:after {
   width: 100%;
 }
